--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Testing testing testing</h1>
+    <header>
+        <nav>
+            <div id="nav_logo">
+                <img src="images/logo.svg" alt="logo">
+            </div>
+            <div id="nav_button">Try it free</div>
+        </nav>
+    </header>
+    <div id="section1">
+        <div id="summary">
+            <div id="summary_header">
+                <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum in illum quibusdam nobis? Excepturi, voluptatibus!</h1>
+            </div>
+            <div id="summary_paragraph">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea animi, libero molestiae impedit sapiente eius tempora, ipsa rerum minima veritatis accusamus porro eligendi minus amet iste cum dolore ex atque.</p>
+            </div>
+            <div id="summary_button">
+                <p>Get started for free</p>
+            </div>
+        </div>
+        <div id="summary_image">
+            <img src="images/illustration-mockups.svg" alt="illustration">
+        </div>
+    </div>
 </body>
 </html>
