--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
             <div id="summary">
                 <div id="summary_header">
-                    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum in illum quibusdam nobis? Excepturi, voluptatibus!</h1>
+                    <h1>Build the community your fans will love</h1>
                 </div>
                 <div id="summary_paragraph">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea animi, libero molestiae impedit sapiente eius tempora, ipsa rerum minima veritatis accusamus porro eligendi minus amet iste cum dolore ex atque.</p>
+                    <p>Huddle re-imagines the way we build a community. you have a voice, But so does your audience. create connections with your users as you engage in genuine conversation</p>
                 </div>
                 <div id="summary_button">
                     <p>Get started for free</p>
