--- a/index.html
+++ b/index.html
@@ -31,9 +31,23 @@
             <div id="summary_image">
                 <img src="images/illustration-mockups.svg" alt="illustration">
             </div>
-
         </div>
     </header>
+    <div id="section2">
+        <div id="part">
+            <div id="summary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui eum animi sed harum nihil tempora cum dolor maiores quis quos?</div>
+            <img src="images/illustration-grow-together.svg" alt="">
+        </div>
+        <div id="part">
+            <div id="summary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui eum animi sed harum nihil tempora cum dolor maiores quis quos?</div>
+            <img src="images/illustration-flowing-conversation.svg" alt="">
+        </div>
+        <div id="part">
+            <div id="summary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui eum animi sed harum nihil tempora cum dolor maiores quis quos?</div>
+           <img src="images/illustration-your-users.svg" alt="">
+        </div>
+
+    </div>
    
 </body>
 </html>
