--- a/index.html
+++ b/index.html
@@ -35,15 +35,24 @@
     </header>
     <div id="section2">
         <div id="part">
-            <div id="summary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui eum animi sed harum nihil tempora cum dolor maiores quis quos?</div>
+            <div class="summary">
+                <h1>Grow Together</h1>
+                <p>Generate meaningful discussion with your audience and build a strong, loyal community. Think of the insightful conversation you miss out on with a feedback form</p>
+            </div>
             <img src="images/illustration-grow-together.svg" alt="">
         </div>
         <div id="part">
-            <div id="summary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui eum animi sed harum nihil tempora cum dolor maiores quis quos?</div>
+            <div class="summary">
+                <h1>Flowing conversation</h1>
+                <p>You wouldn't paginate a conversation in real life so why do it online? Our thread as just-in-time loading for a natural flow</p>
+            </div>
             <img src="images/illustration-flowing-conversation.svg" alt="">
         </div>
         <div id="part">
-            <div id="summary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui eum animi sed harum nihil tempora cum dolor maiores quis quos?</div>
+            <div class="summary">
+                <h1>Your Users</h1>
+                <p>It takes no time at all to integrate your app to an authentication solution. This means once signed into your app, your users can start chatting immediately</p>
+            </div>
            <img src="images/illustration-your-users.svg" alt="">
         </div>
 
