--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -55,7 +61,63 @@
             </div>
            <img src="images/illustration-your-users.svg" alt="">
         </div>
+        <div id="newsletter">
+            <h1>Ready To Build Your Community?</h1>
+            <div class="summary_button">
+                <p>Get started for free</p>
+            </div>
 
+        </div>
+    </div>
+    <div id="footer">
+            <div class="logo">
+                <img src="images/logo_white.svg" alt="">
+                <div class="location" id="bigger"> 
+                    <div>
+                        <img src="images/icon-location.svg" alt="">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dicta tempore officia praesentium aliquid</p>
+                    </div>
+                </div>
+                <div div class="location">
+                    <div>
+                        <img src="images/icon-phone.svg" alt="">
+                    </div>
+                    <div>
+                        <p>+273-345-43267</p>
+                    </div>
+                </div>
+                <div class="location"> 
+                    <div>
+                        <img src="images/icon-email.svg" alt="">
+                    </div>
+                    <div>
+                        <p>jurjnfnr@jfr.com</p>
+                    </div>
+                </div>
+        </div>
+            <div class="location" id="column">
+                <div>About us</div>
+                <div>What We Do</div>
+                <div>Faq</div>
+            </div>
+            <div class="location" id="column">
+                <div>Career</div>
+                <div>Blog</div>
+                <div>Contact us</div>
+            </div>
+            <div class="location"  id="social">
+                <img src="images/facebook.svg" alt="">
+                <img src="images/icon-email.svg" alt="">
+                <img src="images/icon-email.svg" alt="">
+            </div>
+            <div class="copyright">
+                <p>designed by oyeniran samuel sanmi</p>
+            </div>
+        </div>
+        
+        
     </div>
    
 </body>
