--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header>
+        <div id="animation"><a href="https://github.com/sossesam/Responsiveness-and-Media-Queries-2">Link to the repository</a></div>
         <nav>
             <div id="nav_logo">
                 <img src="images/logo.svg" alt="logo">
@@ -93,7 +94,7 @@
                         <img src="images/icon-email.svg" alt="">
                     </div>
                     <div>
-                        <p>jurjnfnr@jfr.com</p>
+                        <p>Example@fylo.com</p>
                     </div>
                 </div>
         </div>
@@ -109,15 +110,13 @@
             </div>
             <div class="location"  id="social">
                 <img src="images/facebook.svg" alt="">
-                <img src="images/icon-email.svg" alt="">
-                <img src="images/icon-email.svg" alt="">
-            </div>
-            <div class="copyright">
-                <p>designed by oyeniran samuel sanmi</p>
+                <img src="images/icons8-twitter-circled.svg" alt="">
+                <img src="images/icons8-instagram.svg" alt="">
             </div>
         </div>
-        
-        
+        <div class="copyright">
+            <p>designed by oyeniran samuel sanmi</p>
+        </div>
     </div>
    
 </body>
